# 40mdm

./: .gitignore  image.html  imagecloud.py  pyproject.toml  run.py
assets/: .gitignore
mdm40/: imgtoansi.py  openai_client.py  text_utils.py
scripts/: run.py
