[tool.poetry]
name = "mdm40"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
openai = "^0.25.0"
loguru = "^0.6.0"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
